# oma

./: CMakeLists.txt  diophantine_solver.cpp  diophantine_solver.h  gap.py  group.cpp  group.h  heuristic.cpp  heuristic.h  main.cpp  makefile  prova.sh  simulated_annealing.cpp  simulated_annealing.h  solutionArray.cpp  solutionArray.h  solveAll.sh  tabu_list.cpp  tabu_list.h  tabu_move.cpp  tabu_move.h  tester.sh  window.cpp  window.h
